test/error/0006-inits4.c
/*
PATTERN: wrong size
PATTERN: c:6:
*/

int arr[3] = {[5] = 4};

